fix: remove overflow-x

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body {
+    max-width: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
     background-color: #212121;
     color: white;
 }
